--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Bulma CSS Framework -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
+  <script type="module" src="/src/main.ts" defer></script>
   <title>Exercice 1</title>
 </head>
 
 <body>
-  <script type="module" src="/src/main.ts"></script>
 </body>
 
 </html>
